<resources>
    <string name="app_name">StoreApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Favorites</string>
    <string name="title_notifications">Cart</string>
    <string name="add_button">Add to Cart</string>
    <string name="delete_button">Delete</string>

    <string name="cart_imageView_contentDescription">Product</string>
    <string name="home_imageView_contentDescription">Product</string>
    <string name="home_imageButton_contentDescription">Favorite</string>

    <string name="title_categories">Categories</string>

    <string name="home_bottomSheet_imageView_contentDescription">Product</string>
</resources>