<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gultendogan.storeapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_bottomSheetFragment"
            app:destination="@id/bottomSheetFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gultendogan.storeapp.ui.favorite.FavoriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gultendogan.storeapp.ui.cart.CartFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_cart" />

    <dialog
        android:id="@+id/bottomSheetFragment"
        android:name="com.gultendogan.storeapp.ui.dialog.BottomSheetFragment"
        android:label="fragment_bottom_sheet"
        tools:layout="@layout/fragment_bottom_sheet" >
        <argument
            android:name="productForDialog"
            app:argType="com.gultendogan.storeapp.data.entity.Products" />
    </dialog>
</navigation>