<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <RelativeLayout
        android:id="@+id/rl_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_dialog"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:contentDescription="@string/home_bottomSheet_imageView_contentDescription"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <RatingBar
                    android:id="@+id/rBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stepSize="0.5"
                    android:theme="@style/Widget.AppCompat.RatingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:numStars="5"
                    />
                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:icon="@drawable/ic_baseline_shopping_cart_24"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple_500"
                android:text="@string/add_button"
                app:iconGravity="textStart"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/fav_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            android:padding="5dp"
            android:background="@drawable/ic_baseline_favorite_border_24"
            android:layout_gravity="right"
            android:contentDescription="@string/home_imageButton_contentDescription"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>